# memecry-old

./: .gitignore  next.config.mjs  package-lock.json  package.json
backend/: pyproject.toml
backend/src/: comment_service.py  config.py  deps.py  main.py  models.py  posting_service.py  schema.py  security.py  user_service.py
backend/src/views/: common.py  posts.py
frontend/: package-lock.json  package.json
frontend/src/components/: Comments.tsx  Nav.tsx
frontend/src/routes/: (top-posts).tsx  index.tsx
frontend/src/store/: index.tsx
prisma/: schema.prisma
src/components/: asides.tsx  comments.tsx  navbar.tsx  post.tsx  upload_post.tsx
src/env/: schema.mjs
src/pages/: _app.tsx  index.tsx
src/server/trpc/router/: post.ts
